--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dh-component-vue-common-table",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "基于dh-elementui表格+分页器的扩展组件",
   "main": "dist/common-table.min.js",
   "scripts": {
@@ -61,6 +61,7 @@
   "dependencies": {
     "@babel/runtime-corejs3": "^7.5.5",
     "dh-element-ui": "^2.5.26",
+    "element-ui": "^2.11.1",
     "luxon": "^1.17.2",
     "vue": "^2.6.10"
   },
