--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-coverage": "^1.1.2",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "less": "^3.9.0",
