--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
-    "karma": "^4.2.0",
+    "jsdom": "^15.1.1",
+    "karma": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.0.0",
     "karma-coverage": "^1.1.2",
     "karma-ie-launcher": "^1.0.0",
+    "karma-jsdom-launcher": "^7.1.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-puppeteer-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "less": "^3.9.0",
