--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-table-plus",
-  "version": "0.4.9",
+  "version": "0.4.10",
   "description": "基于elementui表格+分页器的扩展组件",
   "main": "dist/common-table.min.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .js,.html --fix --format node_modules/eslint-friendly-formatter src test/unit",
     "karma": "cross-env BABEL_ENV=test karma start ./test/karma.conf.js",
     "prepublishOnly": "npm run build && npm run karma",
+    "coveralls": "cat ./test/coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
     "test": "npm run build && npm run karma"
   },
   "author": "almon123@qq.com",
@@ -22,6 +23,7 @@
     "babel-plugin-istanbul": "^5.2.0",
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
+    "coveralls": "^3.0.7",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
     "del": "^5.0.0",
@@ -46,6 +48,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^6.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
